express-sample/deploy/express-sample.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: express-app-service
spec:
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      nodePort: 30080
  selector:
    app: express-app
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: express-app
  name: express-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      imagePullSecrets:
        - name: docker-registry
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: manhterry93/express-sample:1.0.1
          imagePullPolicy: IfNotPresent
          name: express-app
          ports:
            - containerPort: 3000
              name: web
              protocol: TCP
