express-sample/deploy/express-sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-app-service
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
        - pathType: ImplementationSpecific
          path: /echo
          backend:
            service:
              name: express-app-service
              port:
                number: 3000
